--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,9 +9,12 @@
 </head>
 <style>
     body{
-        background-image: url(https://st2.depositphotos.com/1074529/11114/v/950/depositphotos_111148378-stock-illustration-facade-of-toy-store-vector.jpg) ;
+        background-image: url(https://st2.depositphotos.com/1074529/11114/v/950/depositphotos_111148378-stock-illustration-facade-of-toy-store-vector.jpg);
         background-size: cover;
         background-repeat: no-repeat;
+    }
+    li{
+        list-style-type: none;
     }
     
 </style>
@@ -29,8 +32,8 @@
     </form>
 
     <ul>
-        <li><a href="/insert">New Product</a></li>
-        <li><a href="/view">All products</a></li>
+        <li><a href="/insert">Add New Product</a></li>
+        <li><a href="/view">List Products</a></li>
         <li><a href="/register">Register</a></li>
     </ul>
     </center>
