--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -21,7 +21,7 @@
         <br>
         Price <input type="text" name="txtPrice">
         <br>
-        Information <input type="text" name="txtInformation">
+        Description <input type="text" name="txtDescription">
         <br>
         Url Image: <input type="text" name="imgURL"/>
         <br>
