--- a/views/allProduct.hbs
+++ b/views/allProduct.hbs
@@ -22,13 +22,14 @@
         <input type="text" name="txtName">
         <input type="submit" value="Search">
    </form>
+   <font color="red">
    <table class="table table-hover">
        <thead>
            <tr>
                <th>Name</th>
                <th>Price</th>
                <th>Image</th>
-               <th>Information</th>
+               <th>Description</th>
                <th>Edit</th>
                <th>Delete</th>
            </tr>
@@ -39,13 +40,14 @@
                 <td>{{name}}</td>
                 <td>{{price}}</td>
                 <td><img src="{{imgUrl}}" width="150px" height="100px"></td>
-                <td>{{Information}}</td>
+                <td>{{description}}</td>
                  <td><a href="/edit?id={{_id}}">Edit</a></td>
                 <td><a href="/delete?id={{_id}}" onclick="return confirm('Are you sure')">Delete</a></td>
             </tr>
             {{/each}}
        </tbody>      
    </table>
+   </font>
     <a href="/">Go Home</a>
 </body>
 </html>
