--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register new user</title>
+    <style>
+        body{
+            background-image: url(https://static.wixstatic.com/media/24ea6d_bd93709de14748e38e489957c4f34d96~mv2.jpg/v1/fill/w_640,h_344,al_c,q_80,usm_0.66_1.00_0.01/24ea6d_bd93709de14748e38e489957c4f34d96~mv2.webp);
+            background-size: cover;
+        background-repeat: no-repeat;
+        }
+    </style>
 </head>
 <body>
+    <center>
     <form action="/doRegister" method="post">
         User Name <input type="text" name="txtName">
         <br>
@@ -16,5 +24,6 @@
         <br>
         <a href="/">Go Home</a>
     </form>
+    </center>
 </body>
 </html>
