--- a/views/allProduct.hbs
+++ b/views/allProduct.hbs
@@ -27,7 +27,7 @@
        <thead>
            <tr>
                <th>Name</th>
-               <th>Price</th>
+               <th>Price ($)</th>
                <th>Image</th>
                <th>Description</th>
                <th>Edit</th>
