--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -25,6 +25,7 @@
         <br>
         Url Image: <input type="text" name="imgURL"/>
         <br>
+        <h2 style="color: red;">{{priceError}}</h2>
         <input type="submit" value="Insert">
     </form>
     </font>
